--- a/src/output.css
+++ b/src/output.css
@@ -60,6 +60,7 @@
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
     --leading-tight: 1.25;
+    --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
@@ -593,6 +594,9 @@
   .h-\[40px\] {
     height: 40px;
   }
+  .h-\[120px\] {
+    height: 120px;
+  }
   .h-\[250px\] {
     height: 250px;
   }
@@ -664,6 +668,9 @@
   }
   .w-\[90\%\] {
     width: 90%;
+  }
+  .w-\[120px\] {
+    width: 120px;
   }
   .w-\[150px\] {
     width: 150px;
@@ -1339,6 +1346,9 @@
   }
   .rounded-lg {
     border-radius: var(--radius-lg);
+  }
+  .rounded-md {
+    border-radius: var(--radius-md);
   }
   .rounded-xl {
     border-radius: var(--radius-xl);
